--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERV_HOST = https://front-awi-projet-2021.herokuapp.com
+REACT_APP_SERV_HOST=https://back-awi-projet-2021.herokuapp.com/
 PORT=4000
