--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.4",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
