--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "preinstall": "npx npm-force-resolutions "
+    "eject": "react-scripts eject"
   },
-  "resolutions": { "dfa": "1.1.0" },
   "eslintConfig": {
     "extends": [
       "react-app",
