--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.4",
+    "html2canvas": "^1.3.2",
+    "jspdf": "^2.4.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.8",
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.3.0",
     "eslint": "^7.32.0"
