--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^1.3.2",
     "jspdf": "^2.4.0",
     "node-sass": "^6.0.1",
+    "pdf-lib": "^1.17.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-color": "^2.19.3",
