--- a/package.json
+++ b/package.json
@@ -4,18 +4,11 @@
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^2.0.20",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
     "@types/node": "^12.20.27",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.4",
-    "html2canvas": "^1.3.2",
-    "jspdf": "^2.4.0",
     "node-sass": "^6.0.1",
-    "pdf-lib": "^1.17.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-color": "^2.19.3",
@@ -36,8 +29,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -53,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.8",
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.3.0",
     "eslint": "^7.32.0"
