--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-to-print": "^2.14.2",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
