--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.3.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0"
   }
 }
