--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "serve -s build",
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,7 +45,6 @@
   "devDependencies": {
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.3.0",
-    "cross-env": "^7.0.3",
     "eslint": "^7.32.0"
   }
 }
