--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.4",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-to-print": "^2.14.2",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
